<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/background"
    android:columnCount="1"
    android:longClickable="false"
    android:useDefaultMargins="false"
    >

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mainMenu_newGame"
        android:id="@+id/newGame"
        android:layout_row="0"
        android:layout_column="0"
        android:enabled="true"
        android:clickable="true"
        android:singleLine="false"
        android:background="@android:drawable/btn_default"
        android:layout_gravity="center_horizontal"
        android:onClick="startNewGame"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mainMenu_options"
        android:id="@+id/options"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_gravity="center_horizontal"
        android:background="@android:drawable/btn_default"
        android:clickable="true"
        android:enabled="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        android:onClick="viewOptions"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mainMenu_howToPlay"
        android:id="@+id/howToPlay"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_gravity="center_horizontal"
        android:background="@android:drawable/btn_default"
        android:clickable="true"
        android:enabled="true"
        android:layout_marginTop="3dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="3dp"
        android:onClick="viewHowToPlay"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mainMenu_authors"
        android:id="@+id/authors"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_gravity="center_horizontal"
        android:background="@android:drawable/btn_default"
        android:clickable="true"
        android:enabled="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="3dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="3dp"
        android:onClick="viewAuthors"/>
</GridLayout>