<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:clickable="false"
    android:background="@drawable/background"
    android:orientation="horizontal"
    >

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:id="@+id/centerLine"
        android:background="#ffffff"
        android:layout_centerInParent="true"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/middleField"
        android:baselineAlignBottom="true"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false"
        android:layout_alignParentTop="false"
        android:layout_alignParentLeft="false"
        android:layout_alignParentBottom="false"
        android:layout_alignParentRight="false"
        android:src="@drawable/middle_field"
        android:adjustViewBounds="false"
        android:layout_centerInParent="true"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/card2"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="3dp"
        android:layout_above="@+id/middleField"
        android:id="@+id/card1"
        android:orientation="horizontal"
        android:rowCount="5"
        android:columnCount="2"
        android:alignmentMode="alignMargins"
        android:paddingLeft="10dp"
        android:paddingTop="7dp"
        android:paddingRight="19dp"
        android:layout_centerInParent="true"
        android:visibility="invisible">


        <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/player1name"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:textColor="#ffffff"
                    android:textStyle="bold"
                    android:layout_gravity="left|top"
                    android:textSize="30dp"
                    android:layout_marginBottom="5dp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/player1image"
                    android:layout_gravity="right|top"
                    android:layout_column="1"
                    android:layout_row="0"
                    android:background="#d2d2d2"
                    android:layout_rowSpan="2"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/player1country"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_gravity="left|right|top"
            />

        <TextView
            android:text="@string/gameMenu_playerSkills_attack"
            android:id="@+id/player1attackLabel"
            android:layout_column="0"
            android:layout_row="2"
            android:layout_gravity="left|right|top"
            android:layout_marginTop="30dp"
            style="@style/playerAttributes"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/player1attack"
            android:layout_row="2"
            android:layout_column="1"
            style="@style/playerAttributes"
            android:gravity="right"
            android:layout_gravity="bottom|right"
            android:layout_marginRight="50dp"
            android:layout_marginTop="30dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gameMenu_playerSkills_defense"
            android:id="@+id/player1defenseLabel"
            android:layout_row="3"
            android:layout_column="0"
            style="@style/playerAttributes"
            android:layout_marginTop="5dp"
            android:layout_gravity="left|right|top"
            />

        <TextView
            style="@style/playerAttributes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/player1defense"
            android:layout_row="3"
            android:layout_column="1"
            android:gravity="right"
            android:layout_gravity="bottom|right"
            android:layout_marginRight="50dp"
            android:layout_marginTop="5dp"/>


    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="false"
        android:background="@drawable/card2"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="3dp"
        android:id="@+id/card2"
        android:orientation="horizontal"
        android:rowCount="5"
        android:columnCount="2"
        android:alignmentMode="alignMargins"
        android:paddingLeft="10dp"
        android:paddingTop="7dp"
        android:paddingRight="19dp"
        android:layout_centerInParent="true"
        android:layout_below="@+id/middleField"
        android:layout_alignParentBottom="true"
        android:visibility="invisible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/player2name"
            android:layout_row="0"
            android:layout_column="0"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:layout_gravity="left|top"
            android:textSize="30dp"
            android:layout_marginBottom="5dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/player2image"
            android:layout_gravity="right|top"
            android:layout_column="1"
            android:layout_row="0"
            android:background="#d2d2d2"
            android:layout_rowSpan="2"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/player2country"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_gravity="left|right|top"/>

        <TextView
            style="@style/playerAttributes"
            android:text="@string/gameMenu_playerSkills_attack"
            android:id="@+id/player2attackLabel"
            android:layout_column="0"
            android:layout_row="2"
            android:layout_gravity="left|right|top"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            style="@style/playerAttributes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/player2attack"
            android:layout_row="2"
            android:layout_column="1"
            android:gravity="right"
            android:layout_gravity="bottom|right"
            android:layout_marginRight="50dp"
            android:layout_marginTop="30dp"/>

        <TextView
            style="@style/playerAttributes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gameMenu_playerSkills_defense"
            android:id="@+id/player2defenseLabel"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_marginTop="5dp"
            android:layout_gravity="left|right|top"/>

        <TextView
            style="@style/playerAttributes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/player2defense"
            android:layout_row="3"
            android:layout_column="1"
            android:gravity="right"
            android:layout_gravity="bottom|right"
            android:layout_marginRight="50dp"
            android:layout_marginTop="5dp"/>
    </GridLayout>

    <GridLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="10dp"
        android:alpha="0.95"
        android:background="#010101"
        android:visibility="invisible"
        android:padding="30dp"
        android:columnCount="2"
        android:rowCount="4"
        android:layout_centerInParent="true"
        android:id="@+id/endScreen">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/player1scoreLabel"
            android:layout_gravity="left|top"
            android:layout_column="0"
            android:layout_row="0"
            android:singleLine="false"
            android:textColor="#ffffff"
            android:visibility="visible"
            android:textSize="18dp"
            android:layout_marginBottom="10dp"
            android:text="@string/gameMenu_player1score"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/player1score"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_gravity="right|top"
            android:textColor="#ffffff"
            android:textSize="20dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/player2scoreLabel"
            android:layout_gravity="left|top"
            android:layout_column="0"
            android:layout_row="1"
            android:singleLine="false"
            android:textColor="#ffffff"
            android:text="@string/gameMenu_player2score"
            android:textSize="18dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/player2score"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_gravity="right|top"
            android:textColor="#ffffff"
            android:textSize="20dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/endGameText"
            android:layout_alignParentEnd="false"
            android:layout_alignParentStart="false"
            android:gravity="center_vertical|center_horizontal"
            android:layout_alignWithParentIfMissing="false"
            android:background="#2f2f2f"
            android:textSize="40dp"
            android:phoneNumber="false"
            android:password="false"
            android:singleLine="false"
            android:textStyle="bold"
            android:layout_alignParentBottom="false"
            android:layout_alignParentLeft="false"
            android:layout_alignParentTop="false"
            android:layout_centerInParent="true"
            android:textIsSelectable="false"
            android:clickable="false"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_row="2"
            android:layout_gravity="left|right"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

    </GridLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:onClick="endGame"
        android:visibility="invisible"
        android:clickable="true"
        android:id="@+id/layout">
    </FrameLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gameMenu_play"
        android:id="@+id/game_playButton"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:clickable="true"
        android:enabled="true"
        android:background="@android:drawable/btn_default"
        android:onClick="playGame"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="false"
        android:layout_alignParentLeft="false"
        android:layout_alignParentRight="false"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_alignParentTop="false"
        android:layout_centerInParent="true"
        />

</RelativeLayout>